--- a/Demo/firstDemo/index.html
+++ b/Demo/firstDemo/index.html
@@ -8,34 +8,33 @@ http://www.gnu.org/licenses/gpl-3.0.html
     <head>
         <title>First Test</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <script src="../external/jquery-1.6.0.js" type="text/javascript"></script>
-        <script src="../external/gl-matrix.js" type="text/javascript"></script>
-        <script src="../external/Compatibility.js" type="text/javascript"></script>
-        <script src="../engine/core/glQuery.core.js" type="text/javascript"></script>
-        <script src="../external/webgl-debug.js" type="text/javascript"></script>
-        <script src="../engine/parser/glQuery.math.js" type="text/javascript"></script>
-        <script src="../engine/parser/glQuery.collada.js" type="text/javascript"></script>
-        <script src="../engine/core/glQuery.events.js" type="text/javascript"></script>
-        <script src="../engine/hud/glQuery.input.js" type="text/javascript"></script>
-        <script src="../engine/scene/glQuery.scene.js" type="text/javascript"></script>
-        <script src="../engine/webGL/glQuery.webgl.js" type="text/javascript"></script>
-        <script src="../engine/webGL/glQuery.shader.js" type="text/javascript"></script>
-        <script src="../engine/object/glQuery.animation.js" type="text/javascript"></script>
-        <script src="../engine/object/glQuery.object.js" type="text/javascript"></script>
-        <script src="../engine/object/glQuery.physics.js" type="text/javascript"></script>
-        <script src="../engine/object/glQuery.textures.js" type="text/javascript"></script>
+        <script src="../../external/jquery-1.6.0.js" type="text/javascript"></script>
+        <script src="../../external/gl-matrix.js" type="text/javascript"></script>
+        <script src="../../engine/core/glQuery.core.js" type="text/javascript"></script>
+        <script src="../../external/webgl-debug.js" type="text/javascript"></script>
+        <script src="../../engine/parser/glQuery.math.js" type="text/javascript"></script>
+        <script src="../../engine/parser/glQuery.collada.js" type="text/javascript"></script>
+        <script src="../../engine/core/glQuery.events.js" type="text/javascript"></script>
+        <script src="../../engine/hud/glQuery.input.js" type="text/javascript"></script>
+        <script src="../../engine/scene/glQuery.scene.js" type="text/javascript"></script>
+        <script src="../../engine/webGL/glQuery.webgl.js" type="text/javascript"></script>
+        <script src="../../engine/webGL/glQuery.shader.js" type="text/javascript"></script>
+        <script src="../../engine/object/glQuery.animation.js" type="text/javascript"></script>
+        <script src="../../engine/object/glQuery.object.js" type="text/javascript"></script>
+        <script src="../../engine/object/glQuery.physics.js" type="text/javascript"></script>
+        <script src="../../engine/object/glQuery.textures.js" type="text/javascript"></script>
 
-        <script src="../test/blackbirdjs/blackbird.js" type="text/javascript"></script>
+        <script src="../../test/blackbirdjs/blackbird.js" type="text/javascript"></script>
         <script>
             glQuery.ready({
-                partToglQuery:"../",
+                partToglQuery:"../../",
                 canvas:"#demo",
                 fullscreen:true,
-                mapFile:""
+                mapFile:"ObjectMap.xml"
             });
             //glQuery().bind("ready",function(){});
         </script>
-        <link rel="stylesheet" href="../test/blackbirdjs/blackbird.css">
+        <link rel="stylesheet" href="../../test/blackbirdjs/blackbird.css">
         <style>
             *{margin: 0;
               padding: 0px;}
@@ -70,6 +69,6 @@ http://www.gnu.org/licenses/gpl-3.0.html
         </style>
     </head>
     <body>
-        
+        <canvas id="demo"></canvas>
     </body>
 </html>
