Bug to fix nothing is some

--- a/Demo/firstDemo/index.html
+++ b/Demo/firstDemo/index.html
@@ -12,7 +12,7 @@ http://www.gnu.org/licenses/gpl-3.0.html
         <script src="../../external/gl-matrix.js" type="text/javascript"></script>
         <script src="../../engine/core/glQuery.core.js" type="text/javascript"></script>
         <script src="../../external/webgl-debug.js" type="text/javascript"></script>
-        <script src="../../engine/parser/glQuery.math.js" type="text/javascript"></script>
+        <script src="../../engine/core/glQuery.math.js" type="text/javascript"></script>
         <script src="../../engine/parser/glQuery.collada.js" type="text/javascript"></script>
         <script src="../../engine/core/glQuery.events.js" type="text/javascript"></script>
         <script src="../../engine/hud/glQuery.input.js" type="text/javascript"></script>
