--- a/Demo/firstDemo/index.html
+++ b/Demo/firstDemo/index.html
@@ -27,13 +27,9 @@ http://www.gnu.org/licenses/gpl-3.0.html
         
         <script src="../../test/blackbirdjs/blackbird.js" type="text/javascript"></script>
         <script>
-            glQuery.ready({
-                partToglQuery:"../../",
-                canvas:"#demo",
-                fullscreen:true,
-                mapFile:"ObjectMap.xml"
+            glQuery.ready(function(){
+                
             });
-            //glQuery().bind("ready",function(){});
         </script>
         <link rel="stylesheet" href="../../test/blackbirdjs/blackbird.css">
         <style>
@@ -70,6 +66,6 @@ http://www.gnu.org/licenses/gpl-3.0.html
         </style>
     </head>
     <body>
-        <canvas id="demo"></canvas>
+        <canvas id="demo" type="glQuery" fullscreen="true" framerate="true" debug="true" partTo="../../" objects="ObjectMap.xml"></canvas>
     </body>
 </html>
