--- a/Demo/firstDemo/index.html
+++ b/Demo/firstDemo/index.html
@@ -29,7 +29,7 @@ http://www.gnu.org/licenses/gpl-3.0.html
         <script src="../../test/blackbirdjs/blackbird.js" type="text/javascript"></script>
         <script>
             glQuery.ready(function(){
-                glQuery("#Cube").position(vec3.create([-3,0,-10]));
+                glQuery("#Cube")
             });
         </script>
         <link rel="stylesheet" href="../../test/blackbirdjs/blackbird.css">
