Update r16: Phase 1 of implementation of the animation (Part 4) bugfixes
Signed-off-by: farodin91 <farodin91@googlemail.com>

--- a/Demo/firstDemo/index.html
+++ b/Demo/firstDemo/index.html
@@ -29,9 +29,7 @@ http://www.gnu.org/licenses/gpl-3.0.html
         <script src="../../test/blackbirdjs/blackbird.js" type="text/javascript"></script>
         <script>
             glQuery.ready(function(){
-                glQuery("#Cube").move([3,-1,-7], 200, function(e){
-                    alert("test");
-                })
+                glQuery("#Plane2").position([3,-1,-7]);
             });
         </script>
         <link rel="stylesheet" href="../../test/blackbirdjs/blackbird.css">
