--- a/Demo/firstDemo/index.html
+++ b/Demo/firstDemo/index.html
@@ -29,7 +29,7 @@ http://www.gnu.org/licenses/gpl-3.0.html
         <script src="../../test/blackbirdjs/blackbird.js" type="text/javascript"></script>
         <script>
             glQuery.ready(function(){
-                glQuery("#Plane2").rotate(20, [1,0,0], 300, "linear", function(){})
+                glQuery("#Plane").rotate(180, [1,0,0], 3000, "linear", function(){})
             });
         </script>
         <link rel="stylesheet" href="../../test/blackbirdjs/blackbird.css">
