--- a/Demo/firstDemo/index.html
+++ b/Demo/firstDemo/index.html
@@ -12,10 +12,13 @@ http://www.gnu.org/licenses/gpl-3.0.html
         <script src="../../external/gl-matrix.js" type="text/javascript"></script>
         <script src="../../engine/core/glQuery.core.js" type="text/javascript"></script>
         <script src="../../engine/core/glQuery.action.js" type="text/javascript"></script>
-        <script src="../../external/webgl-debug.js" type="text/javascript"></script>
-        <script src="../../engine/core/glQuery.math.js" type="text/javascript"></script>
-        <script src="../../engine/parser/glQuery.collada.js" type="text/javascript"></script>
         <script src="../../engine/core/glQuery.events.js" type="text/javascript"></script>
+        <script src="../../engine/core/glQuery.math.js" type="text/javascript"></script>
+        <script src="../../external/webgl-debug.js" type="text/javascript"></script>
+        <script src="../../engine/parser/glQuery.collada.js" type="text/javascript"></script>
+        <script src="../../engine/parser/glQuery.textures.js" type="text/javascript"></script>
+        <script src="../../engine/parser/glQuery.mesh.js" type="text/javascript"></script>
+        <script src="../../engine/parser/glQuery.material.js" type="text/javascript"></script>
         <script src="../../engine/hud/glQuery.input.js" type="text/javascript"></script>
         <script src="../../engine/scene/glQuery.scene.js" type="text/javascript"></script>
         <script src="../../engine/webGL/glQuery.webgl.js" type="text/javascript"></script>
@@ -23,7 +26,6 @@ http://www.gnu.org/licenses/gpl-3.0.html
         <script src="../../engine/object/glQuery.animation.js" type="text/javascript"></script>
         <script src="../../engine/object/glQuery.object.js" type="text/javascript"></script>
         <script src="../../engine/object/glQuery.physics.js" type="text/javascript"></script>
-        <script src="../../engine/object/glQuery.textures.js" type="text/javascript"></script>
 
         
         <script src="../../test/blackbirdjs/blackbird.js" type="text/javascript"></script>
