Update r33: new Collada Structure (Part 8) and it works again
Signed-off-by: farodin91 <farodin91@googlemail.com>

--- a/Demo/firstDemo/index.html
+++ b/Demo/firstDemo/index.html
@@ -57,7 +57,7 @@ http://www.gnu.org/licenses/gpl-3.0.html
         <script>
             glQuery.ready(function(){
                 //glQuery("light#1").create("")
-                glQuery(".test").rotate(180, [1,0,0], 3000, "linear", function(){})
+                //glQuery(".test").rotate(180, [1,0,0], 3000, "linear", function(){})
                 //glQuery("#Cube").move([2,-1,-10], 30000, "linear", function(){})
             });
         </script>
@@ -115,7 +115,7 @@ http://www.gnu.org/licenses/gpl-3.0.html
         </style>
     </head>
     <body>
-        <canvas id="demo" type="glQuery" fullscreen="true" framerate="true" debug="true" partTo="../../" scene="test5.dae"></canvas>
+        <canvas id="demo" type="glQuery" fullscreen="true" framerate="true" debug="true" partTo="../../" scene="test9.dae"></canvas>
         <a onclick="glQuery.stop()" class="stop ui-corner-all ui-widget ui-widget-content">Stop</a>
         <a onclick="glQuery.run()" class="stop ui-corner-all run ui-widget ui-widget-content">Start</a>
     </body>
